<resources>
    <string name="app_name">NaTour</string>

    <!-- Facebook value -->
    <string name="facebook_app_id">601529914964479</string>
    <string name="fb_login_protocol_scheme">fb601529914964479</string>
    <string name="facebook_client_token">270cff03a69799a3ea99f284d295eb6b</string>


    <!-- Google values -->
    <string name="google_client">975864961953-1p4la1diaks1858j9kgr19hl391vm2m7.apps.googleusercontent.com</string>

    <!-- UI value -->
    <string name="SplashScreen_textView_loading">Loading...</string>

    <string name="Autenticazione_titolo">Accesso</string>
    <string name="Autenticazione_textView_usernameEmail">Username o E-mail</string>
    <string name="Autenticazione_textView_password">Password</string>
    <string name="Autenticazione_button_signIn">Sign-In</string>
    <string name="Autenticazione_textView_signUp">Non hai un account? Registrati</string>
    <string name="Autenticazione_textView_passwordRecovery">Recupera Password</string>

    <string name="Registrazione_titolo">Registrazione</string>
    <string name="Registrazione_textView_username">Username</string>
    <string name="Registrazione_textView_password">Password</string>
    <string name="Registrazione_textView_email">E-mail</string>
    <string name="Registrazione_button_signUp">Sign-Up</string>

    <string name="AttivaAccount_titolo">Completa la Registrazione</string>
    <string name="AttivaAccount_textView_Codice">Inserisci il Codice di Conferma</string>
    <string name="AttivaAccount_textView_inviaDiNuovoCodice">Invia di nuovo il codice</string>
    <string name="AttivaAccount_button_conferma">Conferma</string>
    <string name="AttivaAccount_button_annulla">Annulla</string>

    <string name="RecuperoPassword_titolo">Recupero Password</string>
    <string name="IniziaRecuperoPassword_textView_username">Inserisci l\'username</string>
    <string name="IniziaRecuperoPassword_button_avanti">Avanti</string>
    <string name="CompletaRecuperoPassword_textView_codiceDiConferma">Inserisci il Codice di Conferma</string>
    <string name="CompletaRecuperoPassword_textView_nuovaPassword1">Inserisci la Nuova Password</string>
    <string name="CompletaRecuperoPassword_textView_nuovaPassword2">Reinserisci la Nuova Password</string>
    <string name="CompletaRecuperoPassword_button_conferma">Conferma</string>

    <string name="PersonalizzaAccountImmagineProfilo_textView_impostaImmagine">Imposta una nuova immagine del profilo</string>
    <string name="PersonalizzaAccount_titolo">Personalizza Account</string>


    <string name="button_next">Avanti</string>
    <string name="PersonalizzaAccount_textView_luogoDiResidenza">Luogo di Residenza</string>
    <string name="PersonalizzaAccount_textView_dataDiNascita">Data di Nascita</string>

    <string name="SelezionaNazione_titolo">Seleziona Nazione</string>
    <string name="SelezionaCittà_titolo">Seleziona Città</string>


    <string name="ModificaProfilo_textView_dataNascita_null">Non specificata</string>
    <string name="ModificaProfilo_textView_luogoResidenza_null">Non specificato</string>

    <string name="DettagliItinerarioDialog_textView_lontanoDalPercorso">Attenzione, sei abbastanza lontando dal percorso.</string>


    <!-- IdentityProvider-->
    <string name="IdentityProvider_Cognito">Cognito</string>
    <string name="IdentityProvider_Facebook">Facebook</string>
    <string name="IdentityProvider_Google">Google</string>


    <!-- TODO: Exception Messages -->

    <!-- AMPLIFY ERROR MESSAGES - - - - - - - - - - - - - - - - -->
    <!-- SignUp Exceptions -->
    <string name="AmplifyException_UserAlreadyExists">User already exists</string>
    <string name="AmplifyException_EmailAlreadyExists">PreSignUp failed with error EmailExistsException</string>
    <string name="AmplifyException_PasswordNotConformPolicy">Password did not conform with policy</string>
    <string name="AmplifyException_InvalidVerificationCode">Invalid verification code provided</string>
    <string name="AmplifyException_InvalidEmailFormat">Invalid email address format</string>


    <!-- SignIn Exceptions -->
    <string name="AmplifyException_UserNotExist">User does not exist</string>
    <string name="AmplifyException_IncorrectUserPassword">Incorrect username or password"</string>
    <string name="AmplifyException_UserNotConfirmed">User is not confirmed</string>

    <!-- Password Recovery Exceptions -->
    <string name="AmplifyException_AccountNotFound">Username/client id combination not found</string>
    <string name="AmplifyException_ErrorPasswordRecovery_UserNotConfirmed">Cannot reset password for the user as there is no registered/verified email or phone_number</string>

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - -->


    <!-- Generic ErrorMessage -->
    <string name="Message_UnknownError">È stato riscontrato un problema</string>
    <string name="Message_EmptyFieldError">Uno o più campi non sono stati compilati</string>


    <!-- SignUp ErrorMessage -->
    <string name="Message_UserAlreadyExistsError">L\'username inserito è già utilizzato.</string>
    <string name="Message_EmailAlreadyExistsError">L\'email inserita è già utilizzata.</string>
    <string name="Message_PasswordNotConformPolicyError">La password inserita è troppo corta. Una password deve essere lunga almeno 8 caratteri.</string>
    <string name="Message_InvalidVerificationCodeError">Il codice inserito non è valido</string>
    <string name="Message_InvalidEmailFormatError">L\'e-mail inserita non è valida</string>

    <!-- SignIn ErrorMessage -->
    <string name="Message_UserNotExistError">Username o Email errata</string>
    <string name="Message_IncorrectUserPasswordError">Password errata"</string>
    <string name="Message_UserNotConfirmedError">Account non attivo</string>

    <!-- Password ErrorMessage  -->
    <string name="Message_AccountNotFoundError">L\'username o l\'email inserita non corrisponde a nessun account</string>
    <string name="Message_ErrorPasswordRecoveryUserNotConfirmedError">L\'account dell\'utente non risulta attivato, non è quindi possibile effettuare il recupero della password</string>
    <string name="Message_UnmatchPasswordsError">Le password inserite non corrispondono</string>

    <!-- Itinerary ErrorMessage  -->
    <string name="Message_ItineraryNotFoundError">L\'itinerario selezionato non è disponibile</string>
    <string name="Message_InvalidDifficultyError">La difficoltà selezionata non è valida</string>
    <string name="Message_InvalidItineraryError">L\'itinerario contiene valori non validi</string>

    <!-- GPS ErrorMessage -->
    <string name="Message_GPSFeatureNotFoundError">Il dispositivo non disponde della funzione GPS</string>
    <string name="Message_GPSDisableError">Attivare la funzione GPS</string>
    <string name="Message_GPSLocationNotFoundError">Impossibile trovare la posizione</string>


    <!-- Report ErrorMessage  -->
    <string name="Message_ReportNotFoundError">La segnalazione non è disponibile</string>

    <!-- Image ErrorMessage -->
    <string name="Message_ImageInvalidError">L\'immagine selezionata non è valida</string>

    <!-- Directories ErrorMessage -->
    <string name="Message_DirectoryNotFoundError">La cartella selezionata non è valida</string>

    <!-- GPX ErrorMessage -->
    <string name="Message_GPXNotNullError">Il file GPX selezionato non è valido</string>

    <!-- Server ErrorMessage -->
    <string name="Message_ServerError">Server Irraggiungibile</string>
    <string name="Message_InvalidItineraryTitleError">Inserire un titolo per l\'itinerario</string>
    <string name="Message_InvalidItineraryDifficultyError">Selezionare una difficoltà valida</string>


</resources>