<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.AutenticazioneActivity">

    <TextView
        android:id="@+id/SignIn_textView_accesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Autenticazione_titolo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/SignIn_constraintLayout_usernameEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignIn_textView_accesso">

        <TextView
            android:id="@+id/SignIn_textView_usernameEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Autenticazione_textView_usernameEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/SignIn_relativeLayout_usernameEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/layout_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignIn_textView_usernameEmail">

            <EditText
                android:id="@+id/SignIn_textField_usernameEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="user" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/SignIn_constraintLayout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignIn_constraintLayout_usernameEmail">

        <TextView
            android:id="@+id/SignIn_textView_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Autenticazione_textView_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/SignIn_relativeLayout_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/layout_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignIn_textView_password">

            <EditText
                android:id="@+id/SignIn_passwordField_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:minHeight="48dp"
                android:inputType="textPassword"
                android:text="Password1!" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/SignIn_button_signIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:text="@string/Autenticazione_button_signIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignIn_constraintLayout_password"
        tools:ignore="TextContrastCheck" />


    <TextView
        android:id="@+id/SignIn_textView_registrati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:minHeight="16dp"
        android:text="@string/Autenticazione_textView_signUp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignIn_textView_recuperaPassword" />

    <TextView
        android:id="@+id/SignIn_textView_recuperaPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="16dp"
        android:text="@string/Autenticazione_textView_passwordRecovery"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="@+id/SignIn_button_signIn"
        app:layout_constraintTop_toBottomOf="@+id/SignIn_button_signIn" />

</androidx.constraintlayout.widget.ConstraintLayout>