<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.CompletaRecuperoPasswordActivity">

    <TextView
        android:id="@+id/CompletaRecuperoPassword_textView_recuperoPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/RecuperoPassword_titolo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/CompletaRecuperoPassword_imageView_iconaIndietro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/CompletaRecuperoPassword_textView_recuperoPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/CompletaRecuperoPassword_textView_recuperoPassword"
        app:srcCompat="@drawable/ic_back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CompletaRecuperoPassword_ConstraintLayout_codice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CompletaRecuperoPassword_textView_recuperoPassword">

        <TextView
            android:id="@+id/CompletaRecuperoPassword_textView_codice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CompletaRecuperoPassword_textView_codiceDiConferma"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/CompletaRecuperoPassword_editNumber_codice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CompletaRecuperoPassword_textView_codice" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CompletaRecuperoPassword_ConstraintLayout_password1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CompletaRecuperoPassword_ConstraintLayout_codice">

        <TextView
            android:id="@+id/CompletaRecuperoPassword_textView_password1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CompletaRecuperoPassword_textView_nuovaPassword1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/CompletaRecuperoPassword_editPassword_password1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CompletaRecuperoPassword_textView_password1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CompletaRecuperoPassword_ConstraintLayout_password1">

        <TextView
            android:id="@+id/CompletaRecuperoPassword_textView_password2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CompletaRecuperoPassword_textView_nuovaPassword2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/CompletaRecuperoPassword_editPassword_password2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CompletaRecuperoPassword_textView_password2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/CompletaRecuperoPassword_button_conferma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/CompletaRecuperoPassword_button_conferma"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>