<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.RegistrazioneActivity">

    <TextView
        android:id="@+id/SignUp_textView_registrazione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Registrazione_titolo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/SignUp_imageView_iconaIndietro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/effect_ripple"
        android:clickable="true"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/SignUp_textView_registrazione"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SignUp_textView_registrazione"
        app:srcCompat="@drawable/ic_back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/SignUp_constraintLayout_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_textView_registrazione">

        <TextView
            android:id="@+id/SignUp_textView_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registrazione_textView_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/SignUp_relativeLayout_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/layout_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_textView_username">

            <EditText
                android:id="@+id/SignUp_textField_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="user" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/SignUp_constraintLayout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_constraintLayout_username">

        <TextView
            android:id="@+id/SignUp_textView_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registrazione_textView_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/SignUp_relativeLayout_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/layout_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_textView_password">

            <EditText
                android:id="@+id/SignUp_passwordField_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:text="Password1!" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/SignUp_constraintLayout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_constraintLayout_password">

        <TextView
            android:id="@+id/SignUp_textView_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registrazione_textView_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/SignUp_relativeLayout_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/layout_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_textView_email">

            <EditText
                android:id="@+id/SignUp_emailField_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:text="francesco.e.p.developer@gmail.com" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/SignUp_button_signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/Registrazione_button_signUp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_constraintLayout_email"
        app:layout_constraintVertical_bias="0.442" />

</androidx.constraintlayout.widget.ConstraintLayout>